# TestWorkspace

C++/: konta
C++/AVR_01/: .cproject  .project  main.c
C++/ConsoleApplication1/: ConsoleApplication1.sln
C++/RootMasterEclipse/: .cproject  .project
C++/RootMasterRefactored/: .cproject  .project
C++/RootMasterStary/: RootMaster.sln
C++/TestinEc/: .cproject  .project  Makefile  TestinEc.cpp
C++/Testing_Calculations/: .cproject  .project  main.cpp
C++/Testing_Console_Params/: Testing_Console_Params.sln
C++/definicje/: CMakeLists.txt  library.h
C++/dynamic_mem_exc/: CMakeLists.txt  main.cpp
C++/hate_Windows/: hate_Windows.sln
C++/iteration_xmas_tree/: iteration_xmas_tree.sln
C++/kartk_4_01/: .cproject  .project
C++/proj/: .cproject
C++/random_number/: random_number.sln
C++/sometest/: sometest.sln
C++/sprawdzian01/: .cproject  .project  input.txt
C++/sprawdzian02/: .cproject  .project
C++/testAVR/: .cproject  .project
C++/testing/: testing.sln
C++/testing_TSP_Iput/: CMakeLists.txt  file.txt  main.cpp
C++/testing_getline/: .cproject  .project  test.txt
C++/testing_roots/: .cproject  .project
C++/testing_streams/: .cproject  .project  testing.txt
C++/testing_structs/: CMakeLists.txt  bool_array.cpp  debug_new.cpp  main.cpp  mem_pool_base.cpp
C++/testtesttest/: .cproject  .project  main.cpp
C++/testy_projektu2/: CMakeLists.txt  main.cpp
C++/training_dynamic_data/: CMakeLists.txt  main.cpp
C++/wycieki/nvwa_copy/: CMakeLists.txt
JavaFXTextSrc/: .project
eclipse/: artifacts.xml  eclipse.ini
javaFXTest/: .project
(+348 files in other folders)
